Fixed broken API endpoints